add game feature + provider igdb + redis cache + migrations in postgres
